almost finished, except sidebar

--- a/css/mobile.less
+++ b/css/mobile.less
@@ -156,7 +156,7 @@ body {
     max-width: 100%;
 
     > .site {
-        padding: 0 .5em;
+        padding: 0 !important;
     }
 }
 
@@ -165,7 +165,7 @@ body {
 }
 
 #dokuwiki__header {
-    padding: .5em 0;
+    padding: 0;
 }
 
 
@@ -315,6 +315,57 @@ body {
     padding: .5em;
 }
 
+
+/* --------------==MYMYMY==--------------*/
+div.leftheader{
+    width: auto;
+    float: inherit;
+}
+#dokuwiki__sitetools{
+    padding: 0px;
+    width: 100%;
+    float: left;
+}
+
+#dokuwiki__sitetools form.search{
+    width: 48%;
+    float: left;
+}
+#dokuwiki__header .mobileTools{
+    width: 48%;
+    float: right;
+}
+
+#xxexpand{
+    display: none;
+}
+
+.mobile #xxsidebar{
+    float: none;
+    width: 100%;
+    height: auto;
+    position:inherit;
+    background-color: transparent;
+    .aside{
+        padding: 0.2em !important;
+        margin: 0 0 0.5em 0;
+    }
+    display: block;
+}
+
+.rawedges{
+    border: none;
+    border-radius: 0px;
+    box-shadow:none;
+}
+#xxtoolpop{
+    display: none;
+}
+
+#dokuwiki__aside{
+    padding-left: 0;
+}
+/* <<--------------==MYMYMY==--------------*/
 
 } /* /@media */
 
