--- a/css/structure.less
+++ b/css/structure.less
@@ -9,15 +9,15 @@ body {
 
 #dokuwiki__site {
     margin: 0 auto;
-    max-width: @ini_site_width;
 }
 
 #dokuwiki__site > .site {
-    padding: 0 .5em;
+    padding: 0 ;
 }
 
 #dokuwiki__header {
-    width: 100%;
+    margin: 0 auto;
+    max-width: @ini_site_width;
 
     .headings {
         float: left;
@@ -43,6 +43,8 @@ body {
 
 #dokuwiki__site .wrapper {
     position: relative;
+    margin: 0 auto;
+    max-width: @ini_site_width;
 }
 
 #dokuwiki__aside {
@@ -65,23 +67,14 @@ body {
 
 .showSidebar #dokuwiki__content {
     float: right;
-    margin-left: (-1 * @ini_sidebar_width);
+    margin-right: 5px;
     width: 100%;
-
-    > .pad {
-        margin-left: @ini_sidebar_width;
-    }
 }
 
 [dir=rtl] .showSidebar #dokuwiki__content {
     float: left;
     margin-left: 0;
-    margin-right: (-1 * @ini_sidebar_width);
-
-    > .pad {
-        margin-left: 0;
-        margin-right: @ini_sidebar_width;
-    }
+    margin-right: 0;
 }
 
 #dokuwiki__footer {
